// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly in mode desktop 1`] = `
<span
  className="bp3-popover-wrapper"
>
  <span
    className="bp3-popover-target"
    onBlur={[Function]}
    onFocus={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <span
      className="header-link"
      data-link-id={null}
      onClick={[Function]}
      tabIndex={0}
    >
      <button
        aria-expanded={false}
        className="bp3-button bp3-minimal header-button"
        id={null}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        type="button"
      />
    </span>
  </span>
</span>
`;

exports[`should render correctly in mode mobile 1`] = `
<span
  className="header-link"
  data-link-id={null}
  onClick={[Function]}
>
  <p
    className="header-button-label"
  >
    
  </p>
  <button
    aria-expanded={false}
    className="bp3-button bp3-minimal header-button"
    id={null}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    type="button"
  />
</span>
`;

exports[`should render correctly overlay content 1`] = `
<aside
  aria-modal="true"
  className="bp3-card bp3-elevation-4"
  role="dialog"
>
  <div
    className="bp3-card bp3-elevation-0"
  >
    <div
      className="mentions-legales"
    >
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "<b>Hello</b> world!",
          }
        }
      />
    </div>
  </div>
  <button
    aria-label="Fermer"
    className="bp3-button bp3-minimal close-overlay"
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    style={
      Object {
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    <span
      className="bp3-icon bp3-icon-cross"
      icon="cross"
    >
      <svg
        data-icon="cross"
        height={16}
        viewBox="0 0 16 16"
        width={16}
      >
        <desc>
          cross
        </desc>
        <path
          d="M9.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L8 6.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L6.59 8 3.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71L8 9.41l3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L9.41 8z"
          fillRule="evenodd"
        />
      </svg>
    </span>
  </button>
</aside>
`;
